Fixed -> Frontend: List of loginentries does not expand properly. It cant show more than x number of entries before they just dissapear out of the screen with no way of reaching them

--- a/PM_Frontend/BlazorUI/Components/Modules/LoginEntryListViewModule.razor.css
+++ b/PM_Frontend/BlazorUI/Components/Modules/LoginEntryListViewModule.razor.css
@@ -6,5 +6,24 @@
   font-size: 0.9rem; 
 }
 
+.tableCell-mouseover-pointer:hover {
+  cursor: pointer;
+}
+
+.table-container {
+  max-height: 800px;
+  overflow-y: scroll;
+}
+
+.loginEntry-table {
+  table-layout: fixed;
+  width: 100%;
+  word-wrap: break-word;
+  white-space: normal;
+  border-collapse: collapse;
+  font-family: Arial, sans-serif;
+}
+
+
 
 
